--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
     </div>
 
     <!-- Link to your JavaScript file -->
-    <script src="./script.js"></script>
+    <script src="script.js" defer></script>
   </body>
 </html>
