--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="main.css" />
     <title>TO DO LIST</title>
   </head>
   <body class="font-poppins">
@@ -15,11 +15,7 @@
       >
         <h2 class="text-[#002765] text-3xl font-bold flex items-center mb-5">
           To-Do List
-          <img
-            class="w-8 ml-2.5"
-            src="./assets/images/check-list .png"
-            alt=""
-          />
+          <img class="w-8 ml-2.5" src="assets/images/check-list.png" alt="" />
         </h2>
         <div
           class="flex items-center justify-between bg-[#edeef0] rounded-[30px] pl-5 mb-6"
@@ -33,13 +29,11 @@
           <button id="add-btn" class="btn">Add</button>
         </div>
         <!-- List -->
-        <ul id="list-container" class="">
-          
-        </ul>
+        <ul id="list-container" class=""></ul>
       </div>
     </div>
 
     <!-- Link to your JavaScript file -->
-    <script src="./script.js"></script>
+    <script src="script.js" defer></script>
   </body>
 </html>
