--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TO DO LIST</title>
-    <link rel="shortcut icon" href="#">
     <link rel="stylesheet" href="main.css" />
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
   </head>
   <body class="font-poppins">
     <div
