--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
     </div>
 
     <!-- Link to your JavaScript file -->
-    <script src="script.js" defer></script>
+    <script src="./js/script.js" defer></script>
   </body>
 </html>
