--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>TO DO LIST</title>
     <link rel="stylesheet" href="main.css" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
+    <script src="js/script.js"></script>
   </head>
   <body class="font-poppins">
     <div
@@ -34,7 +35,6 @@
       </div>
     </div>
 
-    <!-- Link to your JavaScript file -->
-    <script src="./js/script.js" defer></script>
+    
   </body>
 </html>
