--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>TO DO LIST</title>
     <link rel="stylesheet" href="main.css" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
-    <script src="js/script.js"></script>
   </head>
   <body class="font-poppins">
     <div
@@ -35,6 +34,7 @@
       </div>
     </div>
 
-    
+    <!-- Link to your JavaScript file -->
+    <script src="./js/script.js" type="module"></script>
   </body>
 </html>
