--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
     </div>
 
-    <!-- Link to your JavaScript file -->
+    <!-- Link to JavaScript file -->
     <script src="./js/script.js" type="module"></script>
   </body>
 </html>
